10% part is done

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,7 @@
 MONGO_URI=mongodb://localhost:27017/mern_stack_web
 PORT=5000
+jwt_SECRET=UJJAVALK
+NODE_ENV=development
+CLOUDINARY_CLOUD_NAME=dfqhyqa9w
+CLOUDINARY_API_KEY=897555153486175
+CLOUDINARY_API_SECRET=lMlWBZBdvPp8by3CndA8GBs4Hj4
