--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/mern_stack_web
+MONGO_URI=mongodb://localhost:27017/chatify
 PORT=5000
 jwt_SECRET=UJJAVALK
 NODE_ENV=development
