profile page and logout created

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/chatify
+MONGO_URI=mongodb://127.0.0.1:27017/chatify
 PORT=5000
 jwt_SECRET=UJJAVALK
 NODE_ENV=development
