finshed last component

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-# MONGO_URI=mongodb://127.0.0.1:27017/chatify
-MONGODB_URI=mongodb+srv://ujj33522_db_user:TVTwPMefIaPoa90I@cluster0.0qha9cu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb://127.0.0.1:27017/chatify
+# MONGODB_URI=mongodb+srv://ujj33522_db_user:TVTwPMefIaPoa90I@cluster0.0qha9cu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5001
 jwt_SECRET=UJJAVALK
 NODE_ENV=development
