--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 # MONGODB_URI=mongodb://127.0.0.1:27017/chatify
-# MONGODB_URI=mongodb+srv://ujj33522_db_user:TVTwPMefIaPoa90I@cluster0.0qha9cu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-MONGODB_URI=mongodb+srv://ujjaval:8ytPX8LJrhLBmTIT@cluster0.gv5c4yw.mongodb.net/
+MONGODB_URI=mongodb+srv://ujj33522_db_user:TVTwPMefIaPoa90I@cluster0.0qha9cu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# MONGODB_URI=mongodb+srv://ujjaval:8ytPX8LJrhLBmTIT@cluster0.gv5c4yw.mongodb.net/
 PORT=5001
 jwt_SECRET=UJJAVALK
 NODE_ENV=development
