--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI="mongodb+srv://chatify:ZqzKBf2JwK5Wr8jZ@cluster0.odw8xna.mongodb.net/"
+MONGODB_URI=mongodb+srv://chatify:ZqzKBf2JwK5Wr8jZ@cluster0.odw8xna.mongodb.net/
 PORT=5001
 jwt_SECRET=UJJAVALK
 NODE_ENV=development
