--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "start": "nodemon src/index.js",
+    "dev": "node src/index.js"
   },
   "keywords": [],
   "author": "",
