--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 MONGODB_URI=mongodb+srv://chatify:ZqzKBf2JwK5Wr8jZ@cluster0.odw8xna.mongodb.net/
 PORT=5001
-jwt_SECRET=UJJAVALK
+jwt_SECRET=CyBDm4fF7S0sA+2uXGs7u4Dy4KQuWGy/ObspFt8jCzM=
 NODE_ENV=development
 CLOUDINARY_CLOUD_NAME=dfqhyqa9w
 CLOUDINARY_API_KEY=897555153486175
